--- a/ci4_hotel/public/css/diseno.css
+++ b/ci4_hotel/public/css/diseno.css
@@ -26,20 +26,15 @@ html {
   .bg3 {
     animation-duration:5s;
   }
-  .content {
-    background-color:rgba(255,255,255,.8);
-    border-radius:.25em;
-    box-shadow:0 0 .25em rgba(0,0,0,.25);
-    box-sizing:border-box;
-    left:50%;
-    padding:10vmin;
-    position:fixed;
-    text-align:center;
-    top:50%;
-    transform:translate(-50%, -50%);
+  .contentmod {
+    background-color: rgba(0, 0, 0, 0.6); 
+    color: white;
+    font-family: 'Courier New', monospace; 
+    border-radius: 10px; 
+    padding: 10px; 
+    text-align: center;
 }
 
-  
   h1 {
     font-family:monospace;
 }
